# dicom-fhir-converter

./: .gitignore  CHANGELOG.md  README.md  dicom2fhir_wrapper.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
dicom2fhir/: create_device.py  dicom2fhir.py  dicom2fhirutils.py  extension_CT.py  extension_MG_CR_DX.py  extension_MR.py  extension_NM.py  extension_PT.py  extension_PT_NM.py  extension_contrast.py  extension_device.py  extension_instance.py  extension_reason.py
dicom2fhir/extensions/: extension_CT.py  extension_MG_CR_DX.py  extension_MR.py  extension_NM.py  extension_US.py  extension_contrast.py  extension_instance.py  extension_sliceThickness.py
resources/terminologies/: bodysite_snomed.json  laterality_snomed.json  radionuclide_NM.json  radiopharmaceutical_NM.json  radiopharmaceutical_PT.json
src/: build_terminologies.py  create_device.py  dicom2fhir.py  dicom2fhirutils.py  settings.py
src/extensions/: extension_PT.py  extension_US.py  extension_instance.py  extension_sliceThickness.py
src/resources/terminologies/: laterality_snomed.json
